# factorio-settings

./: .gitignore  Cargo.toml  README.md  complex-output.json  complex-output.toml
src/: args.rs  codec.rs  main.rs  simple.rs  types.rs
