[package]
name = "factorio-settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
hex-literal = "0.4.1"
indexmap = { version = "1.9.3", features = ["serde"] }
nom = "7.1.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
thiserror = "1.0.40"
toml = { version = "0.7.4", features = ["preserve_order"] }
