[package]
name = "factorio-settings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
byteorder = "1.4.3"
indexmap = { version = "1.9.3", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["preserve_order"] }
toml = { version = "0.7.4", features = ["preserve_order"] }
clap = { version = "4.2.4", features = ["derive"] }
either = "1.8.1"

[dev-dependencies]
hex-literal = "0.4.1"
