[package]
name = "factorio-settings"
description = "CLI application to deserialize & reserialize Factorio's mod-settings.dat to JSON or TOML"
license = "MPL-2"
repository = "https://github.com/CerulanLumina/factorio-settings"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = { version = "0.8", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
either = "1"

[dev-dependencies]
hex-literal = "0.4.1"
